// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cancel edit 1`] = `
<div
  className="coral coral-comment coral coral-reacted-0"
  data-testid="comment-comment-with-replies"
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-full"
  >
    <div
      className="Indent-root"
    >
      <div
        className="coral coral-indent coral-indent-0"
      >
        <div
          className="Box-root HorizontalGutter-root Comment-root HorizontalGutter-half"
          role="article"
        >
          <div
            className="Box-root Flex-root coral coral-comment-topBar Flex-flex Flex-justifySpaceBetween Flex-directionRow"
          >
            <div
              className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn gutter"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignCenter Flex-directionRow gutter"
              >
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="username-popover-comment-with-replies"
                    className="BaseButton-root coral coral-username coral-comment-username"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Username-root"
                    >
                      Markus
                    </span>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="username-popover-comment-with-replies-ariainfo"
                    id="username-popover-comment-with-replies"
                    role="dialog"
                  >
                    <div
                      className="AriaInfo-root"
                      id="username-popover-comment-with-replies-ariainfo"
                    >
                      A popover with more user information
                    </div>
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-alignCenter"
                />
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-alignBaseline Flex-directionRow gutter"
              >
                <button
                  className="BaseButton-root Timestamp-root"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <time
                    className="RelativeTime-root Timestamp-text Comment-timestamp coral coral-timestamp coral-comment-timestamp"
                    dateTime="2018-07-06T18:24:00.000Z"
                    title="2018-07-06T18:24:00.000Z"
                  >
                    2018-07-06T18:24:00.000Z
                  </time>
                </button>
              </div>
            </div>
            <div>
              <div
                className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-alignCenter gutter"
              >
                <button
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantText Button-uppercase coral coral-comment-editButton"
                  data-color="regular"
                  data-testid="comment-edit-button"
                  data-variant="text"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <div
                    className="Box-root Flex-root CommentContainer-editButton Flex-flex Flex-justifyCenter Flex-alignCenter"
                  >
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-sm CommentContainer-editIcon"
                    >
                      edit
                    </i>
                    Edit
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          >
            <div
              className="HTMLContent-root coral coral-content coral-comment-content"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "I like yoghurt",
                }
              }
            />
            <div
              className="Box-root Flex-root coral coral-comment-actionBar Flex-flex Flex-justifySpaceBetween"
            >
              <div
                className="Box-root Flex-root CommentContainer-actionBar Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
              >
                <button
                  aria-label="Respect"
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantText Button-uppercase CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton ReactionButton-button"
                  data-color="mono"
                  data-testid="comment-reaction-button"
                  data-variant="text"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    className="Icon-root Icon-sm"
                  >
                    thumb_up
                  </i>
                </button>
                <button
                  aria-label="Reply"
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantText Button-uppercase CommentContainer-actionButton coral coral-comment-replyButton"
                  data-active={false}
                  data-color="mono"
                  data-testid="comment-reply-button"
                  data-variant="text"
                  disabled={false}
                  id="comments-commentContainer-replyButton-comment-with-replies"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    className="Icon-root Icon-sm"
                  >
                    reply
                  </i>
                </button>
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="permalink-popover-comment-with-replies"
                    aria-label="Share"
                    className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantText Button-uppercase CommentContainer-actionButton coral coral-comment-shareButton"
                    data-active={false}
                    data-color="mono"
                    data-variant="text"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-sm"
                    >
                      share
                    </i>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="permalink-popover-comment-with-replies-ariainfo"
                    id="permalink-popover-comment-with-replies"
                    role="dialog"
                  >
                    <div
                      className="AriaInfo-root"
                      id="permalink-popover-comment-with-replies-ariainfo"
                    >
                      A dialog showing a permalink to the comment
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
              >
                <button
                  className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary coral coral-reportButton coral-comment-reportButton"
                  data-testid="comment-report-button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <div
                    className="Box-root Flex-root Flex-flex Flex-alignCenter"
                  >
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-sm ReportButton-icon"
                    >
                      flag
                    </i>
                    Report
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`edit a comment and handle server error: edit form 1`] = `
<div
  data-testid="comment-comment-with-replies"
>
  <form
    autoComplete="off"
    className="coral coral-editComment"
    onSubmit={[Function]}
  >
    <div
      className="Box-root HorizontalGutter-root HorizontalGutter-full"
    >
      <div>
        <div
          className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn gutter"
        >
          <div>
            <span
              className="Username-root"
            >
              Markus
            </span>
          </div>
          <button
            className="BaseButton-root Timestamp-root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <time
              className="RelativeTime-root Timestamp-text"
              dateTime="2018-07-06T18:24:00.000Z"
              title="2018-07-06T18:24:00.000Z"
            >
              2018-07-06T18:24:00.000Z
            </time>
          </button>
        </div>
      </div>
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-half"
      >
        <label
          className="AriaInfo-root"
          htmlFor="comments-editCommentForm-rte-comment-with-replies"
        >
          Edit comment
        </label>
        <div>
          <div
            className="$root content placeholder toolbar container"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              className="RTE.module-contentEditableContainer"
            >
              <div
                aria-placeholder="Edit comment"
                className="RTE.module-contentEditable coral coral-rte-content RTE-content"
                id="comments-editCommentForm-rte-comment-with-replies"
              />
            </div>
            <div
              className="coral coral-rte-toolbar RTE-toolbar RTE.module-toolbarBottom Toolbar.module-toolbar"
            >
              <button
                className="Button.module-button"
                disabled={false}
                onClick={[Function]}
                title="Bold"
                type="button"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_bold
                </i>
              </button>
              <button
                className="Button.module-button"
                disabled={false}
                onClick={[Function]}
                title="Italic"
                type="button"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_italic
                </i>
              </button>
              <button
                className="Button.module-button"
                disabled={false}
                onClick={[Function]}
                title="Blockquote"
                type="button"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_quote
                </i>
              </button>
              <button
                className="Button.module-button"
                disabled={false}
                onClick={[Function]}
                title="Bulleted List"
                type="button"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_list_bulleted
                </i>
              </button>
            </div>
          </div>
        </div>
        <div
          className="Message-root Message-colorGrey Message-fullWidth coral coral-editComment-remainingTime"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm MessageIcon-root"
          >
            alarm
          </i>
          <span>
            Edit: 
            <time
              className="RelativeTime-root"
              dateTime="2018-07-06T18:24:30.000Z"
              title="2018-07-06T18:24:30.000Z"
            >
              2018-07-06T18:24:30.000Z
            </time>
             remaining
          </span>
        </div>
      </div>
      <div
        className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifyFlexEnd Flex-directionRow gutter"
      >
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantOutline Button-uppercase coral coral-editComment-cancel"
          data-color="mono"
          data-variant="outline"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          Cancel
        </button>
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorStream Button-variantRegular Button-uppercase Button-disabled coral coral-editComment-submit"
          data-color="stream"
          data-variant="regular"
          disabled={true}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="submit"
        >
          Save Changes
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`edit a comment: edit form 1`] = `
<div
  data-testid="comment-comment-with-replies"
>
  <form
    autoComplete="off"
    className="coral coral-editComment"
    onSubmit={[Function]}
  >
    <div
      className="Box-root HorizontalGutter-root HorizontalGutter-full"
    >
      <div>
        <div
          className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn gutter"
        >
          <div>
            <span
              className="Username-root"
            >
              Markus
            </span>
          </div>
          <button
            className="BaseButton-root Timestamp-root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <time
              className="RelativeTime-root Timestamp-text"
              dateTime="2018-07-06T18:24:00.000Z"
              title="2018-07-06T18:24:00.000Z"
            >
              2018-07-06T18:24:00.000Z
            </time>
          </button>
        </div>
      </div>
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-half"
      >
        <label
          className="AriaInfo-root"
          htmlFor="comments-editCommentForm-rte-comment-with-replies"
        >
          Edit comment
        </label>
        <div>
          <div
            className="$root content placeholder toolbar container"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              className="RTE.module-contentEditableContainer"
            >
              <div
                aria-placeholder="Edit comment"
                className="RTE.module-contentEditable coral coral-rte-content RTE-content"
                id="comments-editCommentForm-rte-comment-with-replies"
              />
            </div>
            <div
              className="coral coral-rte-toolbar RTE-toolbar RTE.module-toolbarBottom Toolbar.module-toolbar"
            >
              <button
                className="Button.module-button"
                disabled={false}
                onClick={[Function]}
                title="Bold"
                type="button"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_bold
                </i>
              </button>
              <button
                className="Button.module-button"
                disabled={false}
                onClick={[Function]}
                title="Italic"
                type="button"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_italic
                </i>
              </button>
              <button
                className="Button.module-button"
                disabled={false}
                onClick={[Function]}
                title="Blockquote"
                type="button"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_quote
                </i>
              </button>
              <button
                className="Button.module-button"
                disabled={false}
                onClick={[Function]}
                title="Bulleted List"
                type="button"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_list_bulleted
                </i>
              </button>
            </div>
          </div>
        </div>
        <div
          className="Message-root Message-colorGrey Message-fullWidth coral coral-editComment-remainingTime"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm MessageIcon-root"
          >
            alarm
          </i>
          <span>
            Edit: 
            <time
              className="RelativeTime-root"
              dateTime="2018-07-06T18:24:30.000Z"
              title="2018-07-06T18:24:30.000Z"
            >
              2018-07-06T18:24:30.000Z
            </time>
             remaining
          </span>
        </div>
      </div>
      <div
        className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifyFlexEnd Flex-directionRow gutter"
      >
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantOutline Button-uppercase coral coral-editComment-cancel"
          data-color="mono"
          data-variant="outline"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          Cancel
        </button>
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorStream Button-variantRegular Button-uppercase Button-disabled coral coral-editComment-submit"
          data-color="stream"
          data-variant="regular"
          disabled={true}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="submit"
        >
          Save Changes
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`edit a comment: optimistic response 1`] = `
<div
  data-testid="comment-comment-with-replies"
>
  <form
    autoComplete="off"
    className="coral coral-editComment"
    onSubmit={[Function]}
  >
    <div
      className="Box-root HorizontalGutter-root HorizontalGutter-full"
    >
      <div>
        <div
          className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn gutter"
        >
          <div>
            <span
              className="Username-root"
            >
              Markus
            </span>
          </div>
          <button
            className="BaseButton-root Timestamp-root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <time
              className="RelativeTime-root Timestamp-text"
              dateTime="2018-07-06T18:24:00.000Z"
              title="2018-07-06T18:24:00.000Z"
            >
              2018-07-06T18:24:00.000Z
            </time>
          </button>
        </div>
      </div>
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-half"
      >
        <label
          className="AriaInfo-root"
          htmlFor="comments-editCommentForm-rte-comment-with-replies"
        >
          Edit comment
        </label>
        <div>
          <div
            className="$root content placeholder toolbar container "
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              className="RTE.module-contentEditableContainer  RTE.module-contentEditableContainerDisabled"
            >
              <div
                aria-placeholder="Edit comment"
                className="RTE.module-contentEditable coral coral-rte-content RTE-content  RTE.module-contentEditableDisabled"
                id="comments-editCommentForm-rte-comment-with-replies"
              />
            </div>
            <div
              className="coral coral-rte-toolbar RTE-toolbar  RTE.module-toolbarDisabled RTE.module-toolbarBottom Toolbar.module-toolbar"
            >
              <button
                className="Button.module-button"
                disabled={false}
                onClick={[Function]}
                title="Bold"
                type="button"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_bold
                </i>
              </button>
              <button
                className="Button.module-button"
                disabled={false}
                onClick={[Function]}
                title="Italic"
                type="button"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_italic
                </i>
              </button>
              <button
                className="Button.module-button"
                disabled={false}
                onClick={[Function]}
                title="Blockquote"
                type="button"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_quote
                </i>
              </button>
              <button
                className="Button.module-button"
                disabled={false}
                onClick={[Function]}
                title="Bulleted List"
                type="button"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_list_bulleted
                </i>
              </button>
            </div>
          </div>
        </div>
        <div
          className="Message-root Message-colorGrey Message-fullWidth coral coral-editComment-remainingTime"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm MessageIcon-root"
          >
            alarm
          </i>
          <span>
            Edit: 
            <time
              className="RelativeTime-root"
              dateTime="2018-07-06T18:24:30.000Z"
              title="2018-07-06T18:24:30.000Z"
            >
              2018-07-06T18:24:30.000Z
            </time>
             remaining
          </span>
        </div>
      </div>
      <div
        className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifyFlexEnd Flex-directionRow gutter"
      >
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantOutline Button-uppercase Button-disabled coral coral-editComment-cancel"
          data-color="mono"
          data-variant="outline"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          Cancel
        </button>
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorStream Button-variantRegular Button-uppercase Button-disabled coral coral-editComment-submit"
          data-color="stream"
          data-variant="regular"
          disabled={true}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="submit"
        >
          Save Changes
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`edit a comment: render comment with edit button 1`] = `
<div
  className="coral coral-comment coral coral-reacted-0"
  data-testid="comment-comment-with-replies"
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-full"
  >
    <div
      className="Indent-root"
    >
      <div
        className="coral coral-indent coral-indent-0"
      >
        <div
          className="Box-root HorizontalGutter-root Comment-root HorizontalGutter-half"
          role="article"
        >
          <div
            className="Box-root Flex-root coral coral-comment-topBar Flex-flex Flex-justifySpaceBetween Flex-directionRow"
          >
            <div
              className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn gutter"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignCenter Flex-directionRow gutter"
              >
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="username-popover-comment-with-replies"
                    className="BaseButton-root coral coral-username coral-comment-username"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Username-root"
                    >
                      Markus
                    </span>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="username-popover-comment-with-replies-ariainfo"
                    id="username-popover-comment-with-replies"
                    role="dialog"
                  >
                    <div
                      className="AriaInfo-root"
                      id="username-popover-comment-with-replies-ariainfo"
                    >
                      A popover with more user information
                    </div>
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-alignCenter"
                />
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-alignBaseline Flex-directionRow gutter"
              >
                <button
                  className="BaseButton-root Timestamp-root"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <time
                    className="RelativeTime-root Timestamp-text Comment-timestamp coral coral-timestamp coral-comment-timestamp"
                    dateTime="2018-07-06T18:24:00.000Z"
                    title="2018-07-06T18:24:00.000Z"
                  >
                    2018-07-06T18:24:00.000Z
                  </time>
                </button>
              </div>
            </div>
            <div>
              <div
                className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-alignCenter gutter"
              >
                <button
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantText Button-uppercase coral coral-comment-editButton"
                  data-color="regular"
                  data-testid="comment-edit-button"
                  data-variant="text"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <div
                    className="Box-root Flex-root CommentContainer-editButton Flex-flex Flex-justifyCenter Flex-alignCenter"
                  >
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-sm CommentContainer-editIcon"
                    >
                      edit
                    </i>
                    Edit
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          >
            <div
              className="HTMLContent-root coral coral-content coral-comment-content"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "I like yoghurt",
                }
              }
            />
            <div
              className="Box-root Flex-root coral coral-comment-actionBar Flex-flex Flex-justifySpaceBetween"
            >
              <div
                className="Box-root Flex-root CommentContainer-actionBar Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
              >
                <button
                  aria-label="Respect"
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantText Button-uppercase CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton ReactionButton-button"
                  data-color="mono"
                  data-testid="comment-reaction-button"
                  data-variant="text"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    className="Icon-root Icon-sm"
                  >
                    thumb_up
                  </i>
                </button>
                <button
                  aria-label="Reply"
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantText Button-uppercase CommentContainer-actionButton coral coral-comment-replyButton"
                  data-active={false}
                  data-color="mono"
                  data-testid="comment-reply-button"
                  data-variant="text"
                  disabled={false}
                  id="comments-commentContainer-replyButton-comment-with-replies"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    className="Icon-root Icon-sm"
                  >
                    reply
                  </i>
                </button>
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="permalink-popover-comment-with-replies"
                    aria-label="Share"
                    className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantText Button-uppercase CommentContainer-actionButton coral coral-comment-shareButton"
                    data-active={false}
                    data-color="mono"
                    data-variant="text"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-sm"
                    >
                      share
                    </i>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="permalink-popover-comment-with-replies-ariainfo"
                    id="permalink-popover-comment-with-replies"
                    role="dialog"
                  >
                    <div
                      className="AriaInfo-root"
                      id="permalink-popover-comment-with-replies-ariainfo"
                    >
                      A dialog showing a permalink to the comment
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
              >
                <button
                  className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary coral coral-reportButton coral-comment-reportButton"
                  data-testid="comment-report-button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <div
                    className="Box-root Flex-root Flex-flex Flex-alignCenter"
                  >
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-sm ReportButton-icon"
                    >
                      flag
                    </i>
                    Report
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`edit a comment: server response 1`] = `
<div
  className="coral coral-comment coral coral-reacted-0"
  data-testid="comment-comment-with-replies"
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-full"
  >
    <div
      className="Indent-root"
    >
      <div
        className="coral coral-indent coral-indent-0"
      >
        <div
          className="Box-root HorizontalGutter-root Comment-root HorizontalGutter-half"
          role="article"
        >
          <div
            className="Box-root Flex-root coral coral-comment-topBar Flex-flex Flex-justifySpaceBetween Flex-directionRow"
          >
            <div
              className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn gutter"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignCenter Flex-directionRow gutter"
              >
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="username-popover-comment-with-replies"
                    className="BaseButton-root coral coral-username coral-comment-username"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Username-root"
                    >
                      Markus
                    </span>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="username-popover-comment-with-replies-ariainfo"
                    id="username-popover-comment-with-replies"
                    role="dialog"
                  >
                    <div
                      className="AriaInfo-root"
                      id="username-popover-comment-with-replies-ariainfo"
                    >
                      A popover with more user information
                    </div>
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-alignCenter"
                />
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-alignBaseline Flex-directionRow gutter"
              >
                <button
                  className="BaseButton-root Timestamp-root"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <time
                    className="RelativeTime-root Timestamp-text Comment-timestamp coral coral-timestamp coral-comment-timestamp"
                    dateTime="2018-07-06T18:24:00.000Z"
                    title="2018-07-06T18:24:00.000Z"
                  >
                    2018-07-06T18:24:00.000Z
                  </time>
                </button>
                <div
                  className="EditedMarker-root coral coral-comment-edited"
                >
                  (
                  <span>
                    Edited
                  </span>
                  )
                </div>
              </div>
            </div>
            <div>
              <div
                className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-alignCenter gutter"
              >
                <button
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantText Button-uppercase coral coral-comment-editButton"
                  data-color="regular"
                  data-testid="comment-edit-button"
                  data-variant="text"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <div
                    className="Box-root Flex-root CommentContainer-editButton Flex-flex Flex-justifyCenter Flex-alignCenter"
                  >
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-sm CommentContainer-editIcon"
                    >
                      edit
                    </i>
                    Edit
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          >
            <div
              className="HTMLContent-root coral coral-content coral-comment-content"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Edited! (from server)",
                }
              }
            />
            <div
              className="Box-root Flex-root coral coral-comment-actionBar Flex-flex Flex-justifySpaceBetween"
            >
              <div
                className="Box-root Flex-root CommentContainer-actionBar Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
              >
                <button
                  aria-label="Respect"
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantText Button-uppercase CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton ReactionButton-button"
                  data-color="mono"
                  data-testid="comment-reaction-button"
                  data-variant="text"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    className="Icon-root Icon-sm"
                  >
                    thumb_up
                  </i>
                </button>
                <button
                  aria-label="Reply"
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantText Button-uppercase CommentContainer-actionButton coral coral-comment-replyButton"
                  data-active={false}
                  data-color="mono"
                  data-testid="comment-reply-button"
                  data-variant="text"
                  disabled={false}
                  id="comments-commentContainer-replyButton-comment-with-replies"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    className="Icon-root Icon-sm"
                  >
                    reply
                  </i>
                </button>
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="permalink-popover-comment-with-replies"
                    aria-label="Share"
                    className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantText Button-uppercase CommentContainer-actionButton coral coral-comment-shareButton"
                    data-active={false}
                    data-color="mono"
                    data-variant="text"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-sm"
                    >
                      share
                    </i>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="permalink-popover-comment-with-replies-ariainfo"
                    id="permalink-popover-comment-with-replies"
                    role="dialog"
                  >
                    <div
                      className="AriaInfo-root"
                      id="permalink-popover-comment-with-replies-ariainfo"
                    >
                      A dialog showing a permalink to the comment
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
              >
                <button
                  className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary coral coral-reportButton coral-comment-reportButton"
                  data-testid="comment-report-button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <div
                    className="Box-root Flex-root Flex-flex Flex-alignCenter"
                  >
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-sm ReportButton-icon"
                    >
                      flag
                    </i>
                    Report
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shows expiry message: edit form closed 1`] = `
<div
  className="coral coral-comment coral coral-reacted-0"
  data-testid="comment-comment-with-replies"
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-full"
  >
    <div
      className="Indent-root"
    >
      <div
        className="coral coral-indent coral-indent-0"
      >
        <div
          className="Box-root HorizontalGutter-root Comment-root HorizontalGutter-half"
          role="article"
        >
          <div
            className="Box-root Flex-root coral coral-comment-topBar Flex-flex Flex-justifySpaceBetween Flex-directionRow"
          >
            <div
              className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn gutter"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignCenter Flex-directionRow gutter"
              >
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="username-popover-comment-with-replies"
                    className="BaseButton-root coral coral-username coral-comment-username"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Username-root"
                    >
                      Markus
                    </span>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="username-popover-comment-with-replies-ariainfo"
                    id="username-popover-comment-with-replies"
                    role="dialog"
                  >
                    <div
                      className="AriaInfo-root"
                      id="username-popover-comment-with-replies-ariainfo"
                    >
                      A popover with more user information
                    </div>
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-alignCenter"
                />
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-alignBaseline Flex-directionRow gutter"
              >
                <button
                  className="BaseButton-root Timestamp-root"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <time
                    className="RelativeTime-root Timestamp-text Comment-timestamp coral coral-timestamp coral-comment-timestamp"
                    dateTime="2018-07-06T18:24:00.000Z"
                    title="2018-07-06T18:24:00.000Z"
                  >
                    2018-07-06T18:24:00.000Z
                  </time>
                </button>
              </div>
            </div>
            <div>
              <div
                className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-alignCenter gutter"
              >
                <button
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantText Button-uppercase coral coral-comment-editButton"
                  data-color="regular"
                  data-testid="comment-edit-button"
                  data-variant="text"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <div
                    className="Box-root Flex-root CommentContainer-editButton Flex-flex Flex-justifyCenter Flex-alignCenter"
                  >
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-sm CommentContainer-editIcon"
                    >
                      edit
                    </i>
                    Edit
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          >
            <div
              className="HTMLContent-root coral coral-content coral-comment-content"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "I like yoghurt",
                }
              }
            />
            <div
              className="Box-root Flex-root coral coral-comment-actionBar Flex-flex Flex-justifySpaceBetween"
            >
              <div
                className="Box-root Flex-root CommentContainer-actionBar Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
              >
                <button
                  aria-label="Respect"
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantText Button-uppercase CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton ReactionButton-button"
                  data-color="mono"
                  data-testid="comment-reaction-button"
                  data-variant="text"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    className="Icon-root Icon-sm"
                  >
                    thumb_up
                  </i>
                </button>
                <button
                  aria-label="Reply"
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantText Button-uppercase CommentContainer-actionButton coral coral-comment-replyButton"
                  data-active={false}
                  data-color="mono"
                  data-testid="comment-reply-button"
                  data-variant="text"
                  disabled={false}
                  id="comments-commentContainer-replyButton-comment-with-replies"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    className="Icon-root Icon-sm"
                  >
                    reply
                  </i>
                </button>
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="permalink-popover-comment-with-replies"
                    aria-label="Share"
                    className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantText Button-uppercase CommentContainer-actionButton coral coral-comment-shareButton"
                    data-active={false}
                    data-color="mono"
                    data-variant="text"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-sm"
                    >
                      share
                    </i>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="permalink-popover-comment-with-replies-ariainfo"
                    id="permalink-popover-comment-with-replies"
                    role="dialog"
                  >
                    <div
                      className="AriaInfo-root"
                      id="permalink-popover-comment-with-replies-ariainfo"
                    >
                      A dialog showing a permalink to the comment
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
              >
                <button
                  className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary coral coral-reportButton coral-comment-reportButton"
                  data-testid="comment-report-button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <div
                    className="Box-root Flex-root Flex-flex Flex-alignCenter"
                  >
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-sm ReportButton-icon"
                    >
                      flag
                    </i>
                    Report
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shows expiry message: edit time expired 1`] = `
<div
  data-testid="comment-comment-with-replies"
>
  <form
    autoComplete="off"
    className="coral coral-editComment"
    onSubmit={[Function]}
  >
    <div
      className="Box-root HorizontalGutter-root HorizontalGutter-full"
    >
      <div>
        <div
          className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn gutter"
        >
          <div>
            <span
              className="Username-root"
            >
              Markus
            </span>
          </div>
          <button
            className="BaseButton-root Timestamp-root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <time
              className="RelativeTime-root Timestamp-text"
              dateTime="2018-07-06T18:24:00.000Z"
              title="2018-07-06T18:24:00.000Z"
            >
              2018-07-06T18:24:00.000Z
            </time>
          </button>
        </div>
      </div>
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-half"
      >
        <label
          className="AriaInfo-root"
          htmlFor="comments-editCommentForm-rte-comment-with-replies"
        >
          Edit comment
        </label>
        <div>
          <div
            className="$root content placeholder toolbar container "
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              className="RTE.module-contentEditableContainer  RTE.module-contentEditableContainerDisabled"
            >
              <div
                aria-placeholder="Edit comment"
                className="RTE.module-contentEditable coral coral-rte-content RTE-content  RTE.module-contentEditableDisabled"
                id="comments-editCommentForm-rte-comment-with-replies"
              />
            </div>
            <div
              className="coral coral-rte-toolbar RTE-toolbar  RTE.module-toolbarDisabled RTE.module-toolbarBottom Toolbar.module-toolbar"
            >
              <button
                className="Button.module-button"
                disabled={false}
                onClick={[Function]}
                title="Bold"
                type="button"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_bold
                </i>
              </button>
              <button
                className="Button.module-button"
                disabled={false}
                onClick={[Function]}
                title="Italic"
                type="button"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_italic
                </i>
              </button>
              <button
                className="Button.module-button"
                disabled={false}
                onClick={[Function]}
                title="Blockquote"
                type="button"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_quote
                </i>
              </button>
              <button
                className="Button.module-button"
                disabled={false}
                onClick={[Function]}
                title="Bulleted List"
                type="button"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_list_bulleted
                </i>
              </button>
            </div>
          </div>
        </div>
        <div
          className="ValidationMessage-root coral coral-editComment-expiredTime coral-validation-message"
        >
          <div
            className="Box-root Flex-root Flex-flex Flex-alignCenter"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm ValidationMessage-icon"
            >
              error
            </i>
            <span>
              Edit time has expired. You can no longer edit this comment. Why not post another one?
            </span>
          </div>
        </div>
      </div>
      <div
        className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifyFlexEnd Flex-directionRow gutter"
      >
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantOutline Button-uppercase coral coral-editComment-close"
          data-color="regular"
          data-variant="outline"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </form>
</div>
`;
